<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Always On Display</string>
	<string name="start">Start Service</string>
	<string name="info">Application info</string>
	<string name="stop">Stop Service</string>
	<string name="year">.</string>
	<string name="detail">Touch for Detail</string>
	<string name="aod_running"> is enabled.</string>
	<string name="notAllowed">Not Yet Allowed all Permissions</string>
	<string name="finish">Finished. You can use AOD!</string>
	<string name="notiPermission">Notification Read Permission</string>
	<string name="callPermission">Call related Permission</string>
	<string name="photo">Photo(Not Yet)</string>
	<string name="ok">Allowed</string>
	<string name="startTime">AOD Start Time: </string>
	<string name="stopTime">AOD Stop Time: </string>
	<string name="notSet">Not Setted</string>
	<string name="permission_dialog">If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
	<string name="aodOn">AOD is enabled</string>
	<string name="timerInfo">Set StartTime and StopTime orderly</string>
	<string name="setTimer">Time Set</string>
	<string name="aodOff">AOD is disabled</string>
	<string name="timer">AOD Timer(If no use, AOD will always enabled)</string>
	<string name="wallNone">Wallpaper None(Black)</string>
	<string name="wall1">Wallpaper1(Blue Dots)</string>
	<string name="wall2">Wallpaper2(Colorful Dots)</string>
	<string name="wall3">Wallpaper3(Green Leaves)</string>
	<string name="wall4">Wallpaper4(Pink Dots)</string>
	<string name="wall5">Wallpaper5(The Earth)</string>
	<string name="disableVolume">Disable Volume Button in AOD</string>
	<string name="showHome">Show S8 style home button(Long-Press to exit AOD)</string>
	<string name="noticeDialogTitle">Notice</string>
	<string name="noticeDialog">Hi,\nI am Always On Display Developer Yongmin, Yoo.\nAs you know, I am Korean High School Student 3rd grade.\nAnd I have a very very important exam "SAT" in Nov. 2018.\nSo, I will stop developing app until 2018. 11. 15.\nI could not fix Timer error and add Photo Theme because of my ability lack and I feel sorry about that.\nIn this update, I did my best and stabilized app and I added Power-Saving feature with Proximity Sensor.\nPlease wait for me until 2018. 11. 15.\nThanks for using.</string>
	<string name="noticeDialogClose">Close</string>
	<string name="noticeDialogNeverShow">NeverShowAgain</string>
	<string name="autoBrightness">Adjust Brightness Automatically\nIt could not be worked on some Auto-Brightness-UnSupported Devices\nOn some devices, adjusting brightness might be delayed a little</string>
	<string name="buy">Remove Advertisement / Donation</string>
	<string name="donatePencil">Donate a Pencil to Developer</string>
	<string name="donateNotebook">Donate a Notebook to Developer</string>
	<string name="donateBag">Donate a BackPack to Developer</string>
	<string name="donateReally">Riches Only</string>
	<string name="removeAd">Remove Advertisement</string>
	<string name="already_purchased">Already Purchased</string>
	<string name="buy_wait">Please Wait...</string>
	<string name="buy_ready">Press Here to Purchase</string>
	<string name="dt2w">Knock-On Feature(If it is diabled, you can only exit from AOD Screen using HOME Button, not POWER Button)</string>
	<string name="developer">\nDevelop : Yongmin Yoo in Sungbo High School(SouthKorea)\n</string>
	<string name="sel_date">Selected date: %s</string>
	<string name="month">.</string>
	<string name="theme">AOD Clock Theme</string>
	<string name="share">Share this AOD Application!</string>
	<string name="blog">Visit Developer\'s Blog!</string>
	<string name="warning">##Warning!\nYou must worry about Battery Draining if your device is using IPS display</string>
	<string name="date">.</string>
	<string name="amText">AM </string>
	<string name="pmText">PM </string>
	<string name="showAmPm">Show Am/Pm</string>
	<string name="timeFormat">Use 24h TimeFormat</string>
	<string name="analog">Analog Clock</string>
	<string name="burninprotection">Burn-In Protection(Clock will move to random location every 1 min)</string>
	<string name="s7clock">Samsung Galaxy S7 Clock Default Design</string>
	<string name="s8clock">Samsung Galaxy S8 Clock(Horizontal)</string>
	<string name="s8VerticalClock">Samsung Galaxy S8 Clock(Vertical)</string>
	<string name="s7new">Samsung Galaxy S7 Clock Special Design</string>
	<string name="s7calendar">Samsung Galaxy S7 Calendar</string>
	<string name="brightness">AOD Screen Brightness</string>
	<string name="day"></string>
	<string name="settinginfo">You can use "Double Tap to Wake Up" feature in AOD Screen if you use LG G5 Clock style.</string>
	<string name="setting">Set AOD Screen</string>
	<string name="notitext">Always On Display Service is running</string>
    <string name="hello_world">Hello world!</string>
	<string name="fingerprint_description">Confirm fingerprint to continue.</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password">Password</string>
    <string name="password_description">Enter your password to continue.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="sign_in">Sign In</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again.</string>
    <string name="password_not_recognized">Password not recognized. Try again.</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="use_password">Use password</string>
	<string name="tedpermission_setting">Setting</string>
    <string name="tedpermission_close">Close</string>
    <string name="tedpermission_confirm">Confirm</string>
	<string name="sat_dday">Developer\'s SAT Exam D</string>
</resources>
